--- a/soe_services.yml
+++ b/soe_services.yml
@@ -1,6 +1,6 @@
 ---
 - name: Package Installation and Services Configuration
-  hosts: rhel_servers
+  hosts: soe_{{ soe_version }}
 
   tasks:
 
@@ -35,8 +35,6 @@
         enabled: yes
         state: started
       become: yes
-      when:
-        - ansible_facts['os_family'] == "RedHat"
 
     - name: Remove cockpit service
       ansible.builtin.dnf:
